# Work

./: CMakeLists.txt  README.md  run.bat
Binary/: .gitignore  run.bat
Binary/Resource/: Hand.3DS  Plane.3DS  basket.mtl  distortion.vert  leaf.mtl  maple.mtl
Practice/test5/: test5.sln
Practice/test5/test5/: main.cpp  test5.vcxproj
Resource/: main.frag  main.vert
Source/: AvatarObject.cpp  AvatarObject.h  BasketObject.cpp  BasketObject.h  ButtonObject.cpp  ButtonObject.h  COVRSceneManagerDecorator.cpp  COVRSceneManagerDecorator.h  CSceneManagerDecorator.h  CollidableObject.cpp  CollidableObject.h  ComicUIObject.cpp  ComicUIObject.h  Delegate.h  GameMatrix4.cpp  GameMatrix4.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GamePhysics.cpp  GamePhysics.h  GameTime.cpp  GameTime.h  GameUtil.h  GameWorld.cpp  GameWorld.h  GravityObject.cpp  GravityObject.h  HandObject.cpp  HandObject.h  HeadObject.cpp  HeadObject.h  LeafObject.cpp  LeafObject.h  LeapDevice.cpp  LeapDevice.h  MainWindowInterFace.cpp  MainWindowInterFace.h  MenuUIObject.cpp  (+18 more)
Source/Code/: main.cpp
